--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,14 +1,14 @@
-primary_name: "Your Name"
+primary_name: "Jaewook Lee"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Jaewook Lee"
 
 positions:
-- name: Title or Position
-- name: Affiliation Name
+- name: Post-Doctoral Researcher
+- name: Leiden University
   logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
 
 
-email: "your@email.com"
+email: "to.jaewook.lee@gmail.com"
 # cv_link: link-to-your-cv-file
 gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: your_github_id
@@ -25,9 +25,8 @@ short_bio: >-
     A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
   </p>
   <p>
-    There are various patterns of a bicolour cat. These range from the Van-patterned (colour on the crown of the head 
-    and the tail only) to a solid colour with a throat locket or medallion. Bicolour coats are found in many cat breeds, 
-    as well as being common in domestic longhair and domestic shorthair cats.
+    This is
+    a test.
   </p>
 
 portrait_url: /assets/images/photos/portrait.jpg
@@ -35,16 +34,15 @@ portrait_caption: >-
   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Massachusetts Institute of Technology
+- name: Boston University
   logo: /assets/images/badges/MIT_Social_circle.png
   position: >- 
-    Department of Electrical Engineering and Computer Science <br/>
-    Ph.D. Student
-  date: Sep. 2024 - present
-- name: Peking University
+    Ph.D. in Political Science <br/>
+  date: Sep. 2016 - Jan. 2023
+- name: Seoul National University
   logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2019 - Jul. 2021
+  position: M.A. in Political Science
+  date: Mar. 2009 - Feb. 2011
 
 # experience:
 # - name: Peking University
