--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -5,19 +5,19 @@ navbar_name: "Jaewook Lee"
 positions:
 - name: Post-Doctoral Researcher
 - name: Leiden University
-  logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
+  logo: /assets/images/badges/leiden_seal.png  # Logo is optional
 
 
 email: "to.jaewook.lee@gmail.com"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
+gscholar: 0e9uxO0AAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+twitter: JaewookLee10  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 # linkedin: your-linked-in-id
-# orcid: 0000-0000-0000-0000
+orcid: 0000-0001-8405-8469
 
 short_bio_text_justify: false
 short_bio: >-
@@ -25,13 +25,13 @@ short_bio: >-
     A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
   </p>
   <p>
-    This is
-    a test.
+    Welcom. This is a test.
+    I'm trying to see if this setting works well.
   </p>
 
 portrait_url: /assets/images/photos/portrait.jpg
 portrait_caption: >-
-  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
+  Under construction now.
 
 education:
 - name: Boston University
@@ -40,15 +40,23 @@ education:
     Ph.D. in Political Science <br/>
   date: Sep. 2016 - Jan. 2023
 - name: Seoul National University
-  logo: /assets/images/badges/PKU_red.png
+  logo: /assets/images/badges/snu_seal.png
   position: M.A. in Political Science
   date: Mar. 2009 - Feb. 2011
+- name: Seoul National University
+  logo: /assets/images/badges/snu_seal.png
+  position: B.A. in Political Science
+  date: Mar. 2005 - Feb. 2009
 
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2019 - Jul. 2021
+experience:
+ - name: University of Milan
+   logo: /assets/images/badges/u_of_milan_seal.png
+   position: Post-Doctoral Researcher
+   date: Oct. 2023 - Jul. 2024
+ - name: McGill University
+   logo: /assets/images/badges/mcgill_seal.png
+   position: Post-Doctoral Research Fellow
+   date: Sep. 2022 - Sep. 2023
 
 awards:
 - name: Award Name 2
