--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,16 +22,16 @@ orcid: 0000-0001-8405-8469
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
+   Welcome to my website.
   </p>
   <p>
-    Welcom. This is a test.
+    This site is under construction now.
     I'm trying to see if this setting works well.
   </p>
 
-portrait_url: /assets/images/photos/portrait.jpg
+portrait_url: /assets/images/etc/jaewook_lee_photo_21.jpeg
 portrait_caption: >-
-  Under construction now.
+  This is my photo. Anyway, the site is under construction now.
 
 education:
 - name: Boston University
@@ -49,6 +49,10 @@ education:
   date: Mar. 2005 - Feb. 2009
 
 experience:
+ - name: Leiden University
+   logo: /assets/images/badges/leiden_seal.png
+   position: Post-Doctoral Researcher
+   date: Nov. 2024 - Current
  - name: University of Milan
    logo: /assets/images/badges/u_of_milan_seal.png
    position: Post-Doctoral Researcher
@@ -59,9 +63,7 @@ experience:
    date: Sep. 2022 - Sep. 2023
 
 awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+- name: Early Career Workshop Award (Society for the Advancement of Socio-Economics)
+  date: 2025
+- name: Best Paper Award on Social and Economic Inequality in Class and Inequality Section (American Political Science Association)
+  date: 2023
