--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -9,7 +9,7 @@ positions:
 
 
 email: "to.jaewook.lee@gmail.com"
-# cv_link: link-to-your-cv-file
+cv_link: /assets/Jaewook Lee CV (2025_10_21).pdf
 gscholar: 0e9uxO0AAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: your_github_id
 twitter: JaewookLee10  # Do not include the '@' symbol
