--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ pages:
   url: /publications
 - name: Teaching
   url: /showcase
-- name: Showcase
-  url: /showcase
+#- name: Showcase
+#  url: /showcase
