--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ pages:
 #- name: Home
 #  url: /
 - name: Home
-  url: /index_layout2
+  url: /index
 - name: Research
   url: /publications
 - name: Teaching
