Revert "publication update"
This reverts commit af9e949c2bd5a5d5f450922e7c8eb3ca9a8b30e8.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ pages:
 #- name: Home
 #  url: /
 - name: Home
-  url: /index
+  url: /index_layout2
 - name: Research
   url: /publications
 - name: Teaching
