--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,11 @@ pages:
 #       For example, the `navbar_title` field in `showcase.html` is "Showcase" and the `name` field here should also be "Showcase"
 - name: Home
   url: /index
-- name: Research
+- name: Publications
   url: /publications
+- name: Research
+  url: /research.html
+- name: Teaching
+  url: /teaching.html
 - name: Showcase
   url: /showcase
-- name: Teaching
-  url: /teaching
