--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,7 +11,7 @@ positions:
 email: "to.jaewook.lee@gmail.com"
 cv_link: /assets/Jaewook Lee_CV_(2025_10_21).pdf
 gscholar: 0e9uxO0AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: jwklee.github.io
+github: jwklee
 twitter: JaewookLee10  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
