translations page update

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ pages:
   url: /publications
 - name: Research
   url: /research.html
+- name: Translations
+  url: /translations.html
 - name: Teaching
   url: /teaching.html
 #- name: Showcase
