--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ pages:
   url: /publications
 - name: Research
   url: /research.html
+- name: Software & Data
+  url: /software.html
 - name: Translations
   url: /translations.html
 - name: Teaching
